# huvercraft

./: .gitignore  README.md  __init__.py  __main__.py  atoms.py  composed.py  formatter.py  identity.py  ocr.py  pdf_reader.py  pyproject.toml  registry.py  scanner.py  test_identity.py  test_ocr.py  test_patterns.py  types.py
.github/: copilot-instructions.md
src/huvercraft/: __init__.py  identity.py  ocr.py  pdf_reader.py
src/huvercraft/patterns/: atoms.py  composed.py  registry.py
tests/: test_identity.py  test_ocr.py  test_patterns.py
