[project]
name = "huvercraft"
version = "0.1.0"
description = "Regex toolkit for finding historical Hungarian printer attributions (Zahler/Breuer network) in OCR'd texts and PDFs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["hungarian", "printing", "regex", "ocr", "historical", "genealogy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

dependencies = [
    "regex>=2024.0.0",
]

[project.optional-dependencies]
pdf = ["PyPDF2>=3.0"]
identity = ["jellyfish>=1.0"]
dev = [
    "ruff>=0.15",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
huvercraft = "huvercraft.__main__:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# =============================================================================
# Ruff — linting & formatting
# =============================================================================

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "PT",   # flake8-pytest-style
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "RET",  # flake8-return
]
ignore = [
    "E501",    # line too long — handled by formatter
    "RUF001",  # ambiguous unicode — we NEED Hungarian characters
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
]

[tool.ruff.lint.isort]
known-first-party = ["huvercraft"]

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# =============================================================================
# Dependency groups (replaces deprecated tool.uv.dev-dependencies)
# =============================================================================

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
